-Fixed an issue where AppUser information was not set before an action is executed. -Fixed an Assembly loading issue with command processor. -Fixed login layout issue.

--- a/src/Frapid.Web/Stylesheets/Backend/frapid.css
+++ b/src/Frapid.Web/Stylesheets/Backend/frapid.css
@@ -210,3 +210,16 @@ table.nowrap {
         filter: grayscale(0.4); /* Microsoft Edge and Firefox 35+ */
         -webkit-filter: grayscale(0.2);
     }
+
+@media only screen and (min-width: 960px) {
+    #signin-form {
+        bottom: 0;
+        height: 500px;
+        left: 0;
+        margin: auto;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 440px;
+    }
+}
